--- a/scss/components/_box-titles.scss
+++ b/scss/components/_box-titles.scss
@@ -2,7 +2,6 @@
     color: $main-text-color;
     font-family: $main-font-family;
     font-weight: 600;
-    font-size: 2.5rem;
     padding-bottom: 20px;
 
     &_grid {
