--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -19,7 +19,6 @@
         background: $main-part-button-background;
         box-shadow: $main-part-button--shadow;
         color: $active-button-text-color;
-        font-size: 1.6rem;
         font-weight: 600;
     }
 }
