--- a/scss/components/_product-cards.scss
+++ b/scss/components/_product-cards.scss
@@ -1,9 +1,8 @@
 .product-cards {
     &__item {
     width: 31%;
-    min-width: 250px;
+    min-width: 200px;
     margin: 10px;
-    padding: 30px 40px;
     background: #FFFFFF;
     box-shadow: 5px 5px 5px rgba(255, 180, 68, 0.34);
     display: flex;
@@ -37,11 +36,16 @@
     }
 
     &__image-box {
-        min-height: 250px;
+        padding: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+}
+
+.image-box__image {
+    min-width: 100%;
+    height: auto;
 }
 
 .description {
