--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -7,11 +7,9 @@
 
     &__title {
         font-weight: 600;
-        font-size: 3.3rem;
     }
 
     &__text {
         font-weight: 300;
-        font-size: 1.8rem;
     }
 }
