--- a/scss/pages/_mainpage-media.scss
+++ b/scss/pages/_mainpage-media.scss
@@ -1,25 +1,52 @@
 @media only screen and (max-width: 400px) {
+    .header, .mainpart, .footer {
+        padding: 10px;
+        font-size: .8rem;
+    }
+    
     .header {
-        height: 30vh;
+        height: 28vh;
     }
     .banner-text {
+        width: 55%;
         &__title {
             font-size: 1rem;
         }
     }
+
+    .box-title {
+        font-size: 1.5rem;
+    }
+
+    .blocks__buttons {
+        font-size: .8rem;
+    }
+
     .button-box__button {
         padding: 5px 10px;
         &_banner {
             font-size: .6rem;
         }
     }
+    .product-cards__item {
+        padding: 15px;
+    }
 }
 
 @media only screen and (min-width: 400px) {
+    .header, .mainpart, .footer {
+        padding: 10px;
+        font-size: .8rem;
+    }
+    
     .header {
-        height: 36vh;
+        height: 38vh;
+    }
+    .box-title {
+        font-size: 1.7rem;
     }
     .banner-text {
+        width: 55%;
         &__title {
             font-size: 1.2rem;
         }
@@ -27,17 +54,31 @@
     .button-box__button {
         padding: 5px 10px;
         &_banner {
-            font-size: .8rem;
+            font-size: .73rem;
         }
+    }
+    .product-cards__item {
+        padding: 15px;
     }
 }
 
 @media only screen and (min-width: 600px) {
+    .header, .mainpart, .footer {
+        padding: 20px 50px;
+        font-size: .9rem;
+    }
+
     .header {
-        height: 48vh;
+        height: 49vh;
         &__main-part {
             padding-top: 1vw;
         }
+    }
+    .box-title {
+        font-size: 1.8rem;
+    }
+    .blocks__buttons {
+        font-size: 1.2rem;
     }
     .banner-text {
         &__title {
@@ -50,6 +91,9 @@
     .button-box__button_banner {
         font-size: .8rem;
     }
+    .product-cards__item {
+        padding: 20px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -60,11 +104,16 @@
 
 @media only screen and (min-width: 800px) {
     .header {
-        height: 62vh;
+        height: 68vh;
         &__main-part {
             padding-top: 2vw;
         }
     }
+
+    .box-title {
+        font-size: 2.2rem;
+    }
+
     .banner-text {
         &__title {
             font-size: 2rem;
@@ -79,6 +128,9 @@
             font-size: 1rem;
         }
     }
+    .product-cards__item {
+        padding: 30px 40px;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -88,6 +140,14 @@
             padding-top: 3vw;
         }
     }
+
+    .box-title {
+        font-size: 2.5rem;
+    }
+    .header, .mainpart, .footer {
+        font-size: 1rem;
+    }
+
     .banner-text {
         &__title {
             font-size: 2.4rem;
@@ -101,7 +161,7 @@
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {    
     .header {
         height: 87vh;
         &__main-part {
@@ -123,7 +183,10 @@
 
 @media only screen and (min-width: 1400px) {
     .header {
-        height: 100vh;
+        height: 115vh;
+        &__main-part {
+            padding-top: 5vw;
+        }
     }
     .banner-text {
         &__title {
@@ -138,14 +201,13 @@
     }
 }
 
-@media only screen and (min-width: 1400px) {
-    .header {
-        height: 115vh;
-    }
-}
-
 @media only screen and (max-width: 800px) {
-    
+    .main {
+        background: url("./../img/background.png") no-repeat;
+        background-size: contain;
+    }
+
+
     .header__navigation, .header__cart {
         display: none;
     }
@@ -162,7 +224,7 @@
 
     .product-cards {
         &__item {
-        width: 60%;
+        width: 80%;
 
             &_1, &_2, &_6 {
                 display: none;
