--- a/scss/pages/_mainpage.scss
+++ b/scss/pages/_mainpage.scss
@@ -9,7 +9,6 @@
     width: 100%;
     max-width: $max-width;
     margin: 0 auto;
-    padding: 20px 50px;
     font-family: $main-font-family;
     line-height: 1.2;
 }
